# SHALLOW_WATER

APPLICATIONS/1D/1D_PARABOLOID/: CMakeLists.txt
APPLICATIONS/1D/1D_PARABOLOID/LOCAL_SOURCES/: main.f90  main_SAVE.F90  problem_setup.f90  problem_setup_SAVE.F90
APPLICATIONS/1D/1D_RAMP/: CMakeLists.txt
APPLICATIONS/1D/1D_RAMP/LOCAL_SOURCES/: main.f90  problem_setup.f90  space_dim.f90
APPLICATIONS/1D/1D_RITTER_DAM_BREAK/: CMakeLists.txt
APPLICATIONS/1D/1D_RITTER_DAM_BREAK/LOCAL_SOURCES/: main.f90  problem_setup.f90
APPLICATIONS/1D/1D_SUBCRITICAL_BUMP/: CMakeLists.txt
APPLICATIONS/1D/1D_SUBCRITICAL_BUMP/LOCAL_SOURCES/: main.f90  problem_setup.f90
APPLICATIONS/2D/1D_PARABOLOID/: CMakeLists.txt
APPLICATIONS/2D/1D_PARABOLOID/LOCAL_SOURCES/: main.f90  problem_setup.f90  space_dim.f90
APPLICATIONS/2D/1D_RITTER_DAM_BREAK/: CMakeLists.txt
APPLICATIONS/2D/1D_RITTER_DAM_BREAK/LOCAL_SOURCES/: main.f90  problem_setup.f90
APPLICATIONS/2D/2D_VORTEX/: CMakeLists.txt
APPLICATIONS/2D/2D_VORTEX/LOCAL_SOURCES/: main.f90  problem_setup.f90
APPLICATIONS/2D/TIDAL_WAVE_OVER_CONE/LOCAL_SOURCES/: main.f90  problem_setup.f90
SOURCES/: IDP_limiting.f90  IDP_start_shallow_water.f90  IDP_update_shallow_water.f90  fct.f90  linear_algebra_tools.f90  mesh.f90  read_data.f90  shallow_water_functions.f90
